--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   </header>
 
   <main>
+
+    <!-- Carrosel principal  -->
     <section class="banner-carousel">
       <div class="carousel-inner">
         <div class="carousel-item" alt="Primeiro Slide">
@@ -62,6 +64,24 @@
         <div class="carousel-indicator"> </div>
       </div>
     </section>
+
+    <section class="section light">
+      <h1 class="section-title"> titulo </h1>
+      <p class="section-description"> Descrição generica</p>
+
+      <div class="section-content">
+        <h1>aaaaaaaaaaa</h1>
+      </div>
+    </section>
+
+    <section class="section dark">
+        <h1 class="section-title"> titulo </h1>
+        <p class="section-description"> Descrição generica</p>
+  
+        <div class="section-content">
+          <h1>aaaaaaaaaaa</h1>
+        </div>
+      </section>
   </main>
 
   <footer>
