seçao about us ok

--- a/index.html
+++ b/index.html
@@ -65,21 +65,29 @@
       </div>
     </section>
 
+   
+
     <section class="section light">
-      <h1 class="section-title"> titulo </h1>
-      <p class="section-description"> Descrição generica</p>
-
-      <div class="section-content">
-        <h1>aaaaaaaaaaa</h1>
-      </div>
-    </section>
-
-    <section class="section dark">
         <h1 class="section-title"> titulo </h1>
         <p class="section-description"> Descrição generica</p>
   
         <div class="section-content">
-          <h1>aaaaaaaaaaa</h1>
+          <div class="section-aboutus">
+            <div class="section-aboutus--left">
+               <p> 
+                Cras bibendum sem fermentum nisi rutrum faucibus. Etiam eros nunc, porta ac cursus ut, iaculis vitae ipsum.
+                Duis a facilisis diam. Donec sodales blandit dui et rutrum. Nullam in nisi eget ipsum iaculis iaculis.
+                Proin dui arcu, pretium quis condimentum nec, mollis non urna. Suspendisse velit mi, accumsan vel aliquam 
+                ac, posuere in massa.
+              </p>
+              <button  class="btn btn-primary btn-sm"> GET IN TOUCH! </button>
+
+            </div>
+            <div class="section-aboutus--right">
+              <img src="./media/foto10.jpg" alt="">
+            </div>
+          </div>
+           
         </div>
       </section>
   </main>
