--- a/index.html
+++ b/index.html
@@ -65,31 +65,281 @@
       </div>
     </section>
 
-   
+    <section class="section light">
+      <h1 class="section-title"> ABOUT US </h1>
+      <p class="section-description"> WHO WE ARE?</p>
+
+      <div class="section-content">
+        <div class="section-aboutus">
+          <div class="section-aboutus--left">
+            <p>
+              Cras bibendum sem fermentum nisi rutrum faucibus. Etiam eros nunc, porta ac cursus ut, iaculis vitae
+              ipsum.
+              Duis a facilisis diam. Donec sodales blandit dui et rutrum. Nullam in nisi eget ipsum iaculis iaculis.
+              Proin dui arcu, pretium quis condimentum nec, mollis non urna. Suspendisse velit mi, accumsan vel aliquam
+              ac, posuere in massa.
+            </p>
+            <button class="btn btn-primary btn-sm"> GET IN TOUCH! </button>
+
+          </div>
+          <div class="section-aboutus--right">
+            <img src="./media/foto10.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section dark">
+      <h1 class="section-title"> SERVICES </h1>
+      <p class="section-description"> SERVICES THAT WE PROVIDE </p>
+
+      <div class="section-content">
+        <div class="section-services">
+          <div class="section-service">
+            <img src="./assets/images/icons/medalha.png" />
+            <h4> HIGH QUALITY <br> DESIGN </h4>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+          <div class="section-service">
+            <img src="./assets/images/icons/estrela.png" />
+            <h4> MODERN <br>DESIGN </h4>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+          <div class="section-service">
+            <img src="./assets/images/icons/relogio.png" />
+            <h4> REGULAR <br> UPDATES </h4>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+          <div class="section-service">
+            <img src="./assets/images/icons/balao.png" />
+            <h4> FAST AND FREE <br> SUPPORT</h4>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
 
     <section class="section light">
-        <h1 class="section-title"> titulo </h1>
-        <p class="section-description"> Descrição generica</p>
-  
-        <div class="section-content">
-          <div class="section-aboutus">
-            <div class="section-aboutus--left">
-               <p> 
-                Cras bibendum sem fermentum nisi rutrum faucibus. Etiam eros nunc, porta ac cursus ut, iaculis vitae ipsum.
-                Duis a facilisis diam. Donec sodales blandit dui et rutrum. Nullam in nisi eget ipsum iaculis iaculis.
-                Proin dui arcu, pretium quis condimentum nec, mollis non urna. Suspendisse velit mi, accumsan vel aliquam 
-                ac, posuere in massa.
-              </p>
-              <button  class="btn btn-primary btn-sm"> GET IN TOUCH! </button>
+      <h1 class="section-title"> OUR PROJECTS </h1>
+      <p class="section-description"> WHAT WE CREATE</p>
 
+      <div class="section-content">
+        <div class="section-projects">
+          <nav class="section-projects--projects-nav" alt="Filtro dos projetos">
+            <ul>
+              <li class="active"> <a href="#"> All </a> </li>
+              <li> <a href="#"> Photos </a> </li>
+              <li> <a href="#"> Branding </a> </li>
+              <li> <a href="#"> Adverts </a> </li>
+              <li> <a href="#"> Development </a> </li>
+              <li> <a href="#"> Misc </a> </li>
+            </ul>
+          </nav>
+
+          <div class="section-projects--gallery">
+            <div class="section-projects--photo" alt="Foto 1">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto1.jpg" />
+              </div>
             </div>
-            <div class="section-aboutus--right">
-              <img src="./media/foto10.jpg" alt="">
+
+            <div class="section-projects--photo" alt="Foto 2">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto2.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 3">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto3.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 4">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto4.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 5">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto5.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 6">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto6.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 7">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto7.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 8">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto4.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 9">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto9.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 10">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto10.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 11">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto2.jpg" />
+              </div>
+            </div>
+
+            <div class="section-projects--photo" alt="Foto 12">
+              <div class="section-projects--photo-container">
+                <div class="section-projects--photoinfo">
+                  <h5> ABOUT</h5>
+                  <p> Sed fermentum sapien sed elit volutpat </p>
+                </div>
+                <img src="./media/foto1.jpg" />
+              </div>
             </div>
           </div>
-           
+
+          <button class="btn btn-primary"> MORE PROJECTS </button>
         </div>
-      </section>
+
+      </div>
+      </div>
+    </section>
+
+    <section class="section dark bg-ourteam">
+      <div class="section-ourteam-container">
+
+        <h1 class="section-title"> OUR TEAM </h1>
+        <p class="section-description"> OUR CO-WORKERS</p>
+
+        <div class="section-content">
+          <div class="section-ourteam">
+            <div class="carousel-inner">
+              <div class="carousel-item" alt="Primeiro Slide">
+                <div class="carousel-content">
+                  <img class="avatar" src="./media/mulher2.png">
+                  <h3> Max Caulfield </h3>
+                  <p> Photographer </p>
+
+                  <div class="social-container">
+                    <a href="#"> <img src="./assets/images/icons/linkedin.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/facebook.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/twitter.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/googleplus.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/pinterest.png"> </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item" alt="Segundo Slide">
+                <div class="carousel-content">
+                  <img class="avatar" src="./media/homem1.png">
+                  <h3> Booker DeWitt </h3>
+                  <p> Technical lead </p>
+
+                  <div class="social-container">
+                    <a href="#"> <img src="./assets/images/icons/linkedin.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/facebook.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/twitter.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/googleplus.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/pinterest.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/arroba.png"> </a>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item" alt="Terceiro Slide">
+                <div class="carousel-content">
+                  <img class="avatar" src="./media/mulher1.png">
+                  <h3> Chloe Price </h3>
+                  <p> Creative head</p>
+
+                  <div class="social-container">
+                    <a href="#"> <img src="./assets/images/icons/linkedin.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/facebook.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/twitter.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/googleplus.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/pinterest.png"> </a>
+                    <a href="#"> <img src="./assets/images/icons/arroba.png"> </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item" alt="Quarto Slide">
+                <div class="carousel-content">
+                  <img src="./media/mulher2.png">
+                </div>
+              </div>
+
+            </div>
+
+            <div class="carousel-indicators">
+              <div class="carousel-indicator active"> </div>
+              <div class="carousel-indicator"> </div>
+              <div class="carousel-indicator"> </div>
+            </div>
+          </div>
+        </div>
+    </section>
   </main>
 
   <footer>
