--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
   <main>
 
-    <!-- Carrosel principal  -->
-    <section class="banner-carousel">
+    <section class="banner-carousel" alt="Carrosel principal">
       <div class="carousel-inner">
         <div class="carousel-item" alt="Primeiro Slide">
           <div class="carousel-content">
@@ -65,7 +64,7 @@
       </div>
     </section>
 
-    <section class="section light">
+    <section class="section light" alt="Sobre nós">
       <h1 class="section-title"> ABOUT US </h1>
       <p class="section-description"> WHO WE ARE?</p>
 
@@ -89,7 +88,7 @@
       </div>
     </section>
 
-    <section class="section dark">
+    <section class="section dark" alt="Serviços">
       <h1 class="section-title"> SERVICES </h1>
       <p class="section-description"> SERVICES THAT WE PROVIDE </p>
 
@@ -120,7 +119,7 @@
       </div>
     </section>
 
-    <section class="section light">
+    <section class="section light" alt="Projetos">
       <h1 class="section-title"> OUR PROJECTS </h1>
       <p class="section-description"> WHAT WE CREATE</p>
 
@@ -266,7 +265,7 @@
       </div>
     </section>
 
-    <section class="section dark bg-ourteam">
+    <section class="section dark bg-ourteam" alt="Time">
       <div class="section-ourteam-container">
 
         <h1 class="section-title"> OUR TEAM </h1>
@@ -340,10 +339,362 @@
           </div>
         </div>
     </section>
+
+    <section class="section light" alt="Reviews dos clientes">
+      <h1 class="section-title"> HAPPY CLIENTS </h1>
+      <p class="section-description"> CLIENT REVIEWS</p>
+
+      <div class="section-clients-reviews">
+        <div class="carousel-inner">
+
+          <div class="carousel-item" alt="Primeiro Slide">
+            <div class="carousel-content">
+              <img src="./media/homem1.png" />
+              <h3> Jason Dessen</h3>
+              <h4> Head of PR Departament</h4>
+              <img src="./assets/images/icons/quote.png" alt="">
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget ipsum fermentum, finibus
+                diam
+                at, mollis dui. Suspendisse fringilla orci sed condimentum malesuada. Etiam bibendum placerat enim, in
+                tincidunt leo vehicula eu. Curabitur ut lorem placerat, tincidunt nulla eget, viverra lorem. Aenean
+                imperdiet erat enim, sed pulvinar dui tincidunt et. Vestibulum commodo dolor lacus, aliquam fringilla
+                sapien finibus eu. Donec et arcu purus. Fusce egestas ac libero vel blandit.
+              </p>
+            </div>
+          </div>
+
+          <div class="carousel-item" alt="Segundo Slide">
+            <div class="carousel-content">
+              <img src="./media/homem1.png" />
+              <h3> Jason Dessen</h3>
+              <h4> Head of PR Departament</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget ipsum fermentum, finibus
+                diam
+                at, mollis dui. Suspendisse fringilla orci sed condimentum malesuada. Etiam bibendum placerat enim, in
+                tincidunt leo vehicula eu. Curabitur ut lorem placerat, tincidunt nulla eget, viverra lorem. Aenean
+                imperdiet erat enim, sed pulvinar dui tincidunt et. Vestibulum commodo dolor lacus, aliquam fringilla
+                sapien finibus eu. Donec et arcu purus. Fusce egestas ac libero vel blandit.
+              </p>
+            </div>
+          </div>
+
+          <div class="carousel-indicators">
+            <div class="carousel-indicator active"> </div>
+            <div class="carousel-indicator"> </div>
+            <div class="carousel-indicator"> </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" alt="Parceiros">
+      <div class="section-content section-partners--container">
+        <img src="./media/empresa1.png" />
+        <img src="./media/empresa2.png" />
+        <img src="./media/empresa3.png" />
+        <img src="./media/empresa4.png" />
+        <img src="./media/empresa5.png" />
+        <img src="./media/empresa6.png" />
+      </div>
+    </section>
+
+    <section class="section light" alt="Preços">
+      <h1 class="section-title"> PRICE </h1>
+      <p class="section-description"> PRICING TABLE</p>
+
+      <div class="section-content">
+        <div class="section-prices">
+
+          <div class="section-prices--card">
+            <div class="content">
+
+              <h2 class="title"> Express </h2>
+              <h1 class="value">$ 9,99</h1>
+              <p class="month">/ Month</p>
+
+              <p class="item"> Tracking Issues </p>
+              <p class="item"> Add bugs through email </p>
+              <p class="item"> Notifications </p>
+              <p class="item"> Time tracking </p>
+              <p class="item"> Custom views </p>
+
+              <button class="btn btn-sm btn-dark"> CHOOSE </button>
+            </div>
+          </div>
+
+          <div class="section-prices--card">
+            <div class="content">
+
+              <h2 class="title"> Standart </h2>
+              <h1 class="value">$ 14,99</h1>
+              <p class="month">/ Month</p>
+
+              <p class="item"> Tracking Issues </p>
+              <p class="item"> Add bugs through email </p>
+              <p class="item"> Notifications </p>
+              <p class="item"> Time tracking </p>
+              <p class="item"> Custom views </p>
+
+              <button class="btn btn-sm btn-dark"> CHOOSE </button>
+            </div>
+          </div>
+
+          <div class="section-prices--card">
+            <div class="content">
+
+              <h2 class="title"> Luxe </h2>
+              <h1 class="value">$ 19,99</h1>
+              <p class="month">/ Month</p>
+
+              <p class="item"> Tracking Issues </p>
+              <p class="item"> Add bugs through email </p>
+              <p class="item"> Notifications </p>
+              <p class="item"> Time tracking </p>
+              <p class="item"> Custom views </p>
+
+              <button class="btn btn-sm btn-dark"> CHOOSE </button>
+            </div>
+          </div>
+
+          <div class="section-prices--card">
+            <div class="content">
+
+              <h2 class="title"> Premium </h2>
+              <h1 class="value">$ 24,99</h1>
+              <p class="month">/ Month</p>
+
+              <p class="item"> Tracking Issues </p>
+              <p class="item"> Add bugs through email </p>
+              <p class="item"> Notifications </p>
+              <p class="item"> Time tracking </p>
+              <p class="item"> Custom views </p>
+
+              <button class="btn btn-sm btn-primary"> CHOOSE </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" alt="Premium">
+      <h1 class="section-title"> PREMIUM </h1>
+      <p class="section-description"> EVEN MORE FEATURES AVAILABLE</p>
+
+      <div class="section-content">
+        <div class="section-premium">
+          <div class="section-premium--left">
+            <img src="./media/livros.png" alt="">
+          </div>
+
+          <div class="section-premium--right">
+            <div class="item">
+              <div class="item-check">
+                <img src="./assets/images/icons/check.png" alt="">
+              </div>
+
+              <div class="item-content">
+                <h1> First Feature </h1>
+                <p> 
+                  Ed at lacus lacinia, varius velit at, aliquet augue. Morbi auctor fermentum augue ut vestibulum. Nam vel
+                  tristique ipsum. Sed ac nunc metus. Etiam condimentum risus ut arcu faucibus egestas. Duis posuere
+                  vulputate odio.
+                 </p>
+                 <p> - FEATURE ONE </p>
+                 <p> - FEATURE SECOND </p>
+                 <p> - FEATURE THIRD </p>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="item-check">
+                <img src="./assets/images/icons/check.png" alt="">
+              </div>
+
+              <div class="item-content">
+                <h1> Second Feature </h1>
+                <p> 
+                  Ed at lacus lacinia, varius velit at, aliquet augue. Morbi auctor fermentum augue ut vestibulum. Nam vel
+                  tristique ipsum. 
+                 </p>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="item-check">
+                <img src="./assets/images/icons/check.png" alt="">
+              </div>
+
+              <div class="item-content">
+                <h1> Third Feature </h1>
+                <p> 
+                  Sed ac nunc metus. Etiam condimentum risus ut arcu faucibus egestas. Duis posuere vulputate odio.
+                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section dark" alt="Alguns fatos">
+      <h1 class="section-title"> SOME FACTS </h1>
+      <p class="section-description"> ABOUT OUR WORK </p>
+
+      <div class="section-content">
+        <div class="section-some-facts">
+          <div class="section-some-fact">
+            <h1> 1000 </h1>
+            <h2> Design projects released </h2>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+
+          <div class="section-some-fact">
+            <h1> 900 </h1>
+            <h2> Photos </h2>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+
+          <div class="section-some-fact">
+            <h1> 500 </h1>
+            <h2> Marketing <br> ideas </h2>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+
+          <div class="section-some-fact">
+            <h1> 100 </h1>
+            <h2> Exhibitions </h2>
+            <p>Proin rhoncus sit amet ligula accumsan aliquam</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="section" alt="Social">
+      <div class="section-content section-social--container">
+       <img class="share-icon" src="./assets/images/icons/share.png" />
+        <h1>  Tell about US: </h1>
+
+        <div class="icon">
+          <img src="./assets/images/icons/twitter-color.png" />
+          <p> 152 </p>
+        </div>
+
+        <div class="icon">
+          <img src="./assets/images/icons/linkedin-color.png" />
+          <p> 31 </p>
+        </div>
+
+        <div class="icon">
+          <img src="./assets/images/icons/facebook-color.png" />
+          <p> 165 </p>
+        </div>
+
+        <div class="icon">
+          <img src="./assets/images/icons/instagram-color.png" />
+          <p> 22 </p>
+        </div>
+      
+        <div class="icon">
+          <img src="./assets/images/icons/pinterest-color.png" />
+          <p> 165 </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section light" alt="Contato">
+        <h1 class="section-title"> CONTACT US </h1>
+        <p class="section-description"> OUR AGENCY LOCATED IN MELBOURNE AUSTRALIA</p>
+  
+        <div class="section-content">
+          <div class="section-contact">
+            <form>
+              <div class="row">
+                <input type="text" placeholder="Name"> 
+                <input type="email" placeholder="Email"> 
+              </div>
+
+              <div class="row">
+                <input type="text" placeholder="Subject"> 
+              </div>
+
+              <div class="row">
+                <input rows="5" cols="3" placeholder="Message">  </input>
+              </div>
+
+              <div class="row">
+                  <button  class="btn btn-primary" type="submit"> SEND MESSAGE </button>
+              </div>>
+            </form>
+
+          </div>
+        </div>
+    </section>
+
+    <section class="section-map" alt="mapa">
+      <div class="section-map--container">
+        <div class="section-map--info">
+          <div class="section-map--info-item">
+              <div class="section-map--info-item-icon">
+                <img src="./assets/images/icons/carta.png" />
+              </div>
+            <p> PO Box 16122 Collins Street West Victoria 8007  </p>
+          </div>
+
+          <div class="section-map--info-item">
+              <div class="section-map--info-item-icon">
+                <img src="./assets/images/icons/localizacao.png" />
+              </div>
+            <p> 240 West 55th Street    </p>
+          </div>
+
+          <div class="section-map--info-item">
+              <div class="section-map--info-item-icon">
+                <img src="./assets/images/icons/telefone.png" />
+              </div>
+            <p> 1-877-987-6401 </p>
+          </div>
+
+          <div class="section-map--info-item">
+              <div class="section-map--info-item-icon">
+                <img src="./assets/images/icons/arroba.png" />
+              </div>
+            <p> bukindesign@gmail.com </p>
+          </div>
+
+          <div class="section-map--info-item">
+              <div class="section-map--info-item-icon">
+                <img src="./assets/images/icons/web.png" />
+              </div>
+            <p> github.com/thenriquedb   </p>
+          </div>
+        </div>
+      </section>
+    </section>
   </main>
 
-  <footer>
-
+  <footer >
+    <div class="footer-content">
+      <div class="col social"> 1 </div>
+      <div class="col description">
+        <p>
+            Nam rutrum arcu ornare orci sollicitudin convallis. Nunc feugiat tellus eros, sit amet sodales justo pellentesque 
+            id. Cras euismod orci id ex venenatis fermentum. Cras vitae arcu a erat ornare porttitor. Nunc lectus metus, 
+            dapibus et lacinia vitae, gravida at massa. Fusce tincidunt orci sed felis faucibus lacinia. Maecenas sagittis 
+            ultrices tincidunt. Cras suscipit porta porta. Maecenas a pellentesque arcu, a lacinia dui. Curabitur dictum 
+            accumsan augue sed commodo.
+        </p>
+      </div>
+      <div class="col newsletter"> 
+          <form>
+              <input type="text" placeholder="Email to subscribe"> 
+              <button  class="btn btn-primary" type="submit"> SUBSCRIBE </button>
+            </form>  
+      </div>
+    </div>
   </footer>
 </body>
 
